[tool.poetry]
name = "flask-rest-api"
version = "0.1.0"
description = "Rest API in Python Flask for Distributed systems and service integration PJAIT"
authors = ["yoggys <61660055+yoggys@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
flask-marshmallow = "^0.14.0"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.18"
waitress = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
